# immediate_ui_experiment

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bud.json
.glamour/: glamour.cmake  glamour.json
projects/: CMakeLists.txt
projects/azure_devops_experiment/: CMakeLists.txt  azure_devops_calls.cpp  azure_devops_wrapper.cpp  azure_devops_wrapper.h
projects/imgui_bindings/: CMakeLists.txt
projects/immediate_ui_experiment/: CMakeLists.txt  DemoEventListener.cpp  DemoEventListener.h  DemoEventListenerInstancer.cpp  DemoEventListenerInstancer.h  DemoWindow.cpp  DemoWindow.h  PlatformExtensions.cpp  PlatformExtensions.h  RendererExtensions.cpp  RendererExtensions.h  Shell.cpp  Shell.h  ShellFileInterface.cpp  ShellFileInterface.h  castigator.h  crude.cpp  crude.h  extensions.h  git_wrapper.cpp  git_wrapper.h  main.cpp
projects/immediate_ui_experiment/Components/: application_error.h  application_status.h
projects/immediate_ui_experiment/Entities/: application.cpp  application.h
projects/immediate_ui_experiment/Tags/: application_tag.h
projects/rmlui_backends/: CMakeLists.txt  RmlUi_Backend.h  RmlUi_Backend_GLFW_GL3.cpp  RmlUi_Backend_GLFW_GL3.h  RmlUi_Backend_GLFW_GL3_Data.h
