project(
  ${PROJECTS_AZURE_DEVOPS_EXPERIMENT_TARGET_NAME}
  VERSION ${SOLUTION_VERSION}
  LANGUAGES CXX
)

file(
  GLOB_RECURSE PROJECTS_AZURE_DEVOPS_EXPERIMENT_FILES 
  LIST_DIRECTORIES false
  RELATIVE ${PROJECTS_AZURE_DEVOPS_EXPERIMENT_INCLUDE_DIRECTORIES}
  CONFIGURE_DEPENDS
  *.cpp *.h */*.cpp */*.h
)

add_library(
  ${PROJECTS_AZURE_DEVOPS_EXPERIMENT_TARGET_NAME} SHARED
  ${PROJECTS_AZURE_DEVOPS_EXPERIMENT_FILES}
)

target_include_directories(
  ${PROJECTS_AZURE_DEVOPS_EXPERIMENT_TARGET_NAME} PRIVATE
  ${PROJECTS_AZURE_DEVOPS_EXPERIMENT_INCLUDE_DIRECTORIES}
)

source_group(
  TREE ${CMAKE_CURRENT_LIST_DIR} 
  FILES ${PROJECTS_AZURE_DEVOPS_EXPERIMENT_FILES}
)

set_target_properties(
  ${PROJECTS_AZURE_DEVOPS_EXPERIMENT_TARGET_NAME} PROPERTIES
  COMMON_LANGUAGE_RUNTIME ""
  CXX_STANDARD 17
  FOLDER "projects"
  VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}
)