project(
  ${PROJECTS_IMMEDIATE_UI_EXPERIMENT_TARGET_NAME}
  VERSION ${SOLUTION_VERSION}
  LANGUAGES CXX
)

file(
  GLOB_RECURSE PROJECTS_IMMEDIATE_UI_EXPERIMENT_FILES 
  LIST_DIRECTORIES false
  RELATIVE ${PROJECTS_IMMEDIATE_UI_EXPERIMENT_INCLUDE_DIRECTORIES}
  CONFIGURE_DEPENDS
  *.cpp *.h */*.cpp */*.h
)

add_executable(
  ${PROJECTS_IMMEDIATE_UI_EXPERIMENT_TARGET_NAME}
  ${PROJECTS_IMMEDIATE_UI_EXPERIMENT_FILES}
)

target_include_directories(
  ${PROJECTS_IMMEDIATE_UI_EXPERIMENT_TARGET_NAME} PRIVATE
  ${PROJECTS_IMMEDIATE_UI_EXPERIMENT_INCLUDE_DIRECTORIES}
  ${PROJECTS_IMGUI_BINDINGS_INCLUDE_DIRECTORIES}
)

target_link_libraries(
  ${PROJECTS_IMMEDIATE_UI_EXPERIMENT_TARGET_NAME} PRIVATE
  ${PROJECTS_IMGUI_BINDINGS_TARGET_NAME}
  EnTT::EnTT
  fmt::fmt
  glad::glad
  glfw
  imgui::imgui
  libgit2::libgit2
  nanobench::nanobench
  rapidjson
  spdlog::spdlog
)

source_group(
  TREE ${CMAKE_CURRENT_LIST_DIR} 
  FILES ${PROJECTS_IMMEDIATE_UI_EXPERIMENT_FILES}
)

set_target_properties(
  ${PROJECTS_IMMEDIATE_UI_EXPERIMENT_TARGET_NAME} PROPERTIES
  FOLDER "projects"
  VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}
)
