project(
  ${PROJECTS_RMLUI_BACKENDS_TARGET_NAME}
  VERSION ${SOLUTION_VERSION}
  LANGUAGES CXX
)

add_library(
  ${PROJECTS_RMLUI_BACKENDS_TARGET_NAME} STATIC
  "${PROJECTS_RMLUI_BACKENDS_INCLUDE_DIRECTORIES}/RmlUi_Backend.h"
  "${PROJECTS_RMLUI_BACKENDS_INCLUDE_DIRECTORIES}/RmlUi_Backend_GLFW_GL3.cpp"
  "${PROJECTS_RMLUI_BACKENDS_INCLUDE_DIRECTORIES}/RmlUi_Backend_GLFW_GL3.h"
  "${PROJECTS_RMLUI_BACKENDS_INCLUDE_DIRECTORIES}/RmlUi_Backend_GLFW_GL3_Data.h"
  "${PROJECTS_RMLUI_BACKENDS_INCLUDE_DIRECTORIES}/RmlUi_Include_GL3.h"
  "${PROJECTS_RMLUI_BACKENDS_INCLUDE_DIRECTORIES}/RmlUi_Include_Windows.h"
  "${PROJECTS_RMLUI_BACKENDS_INCLUDE_DIRECTORIES}/RmlUi_Platform_GLFW.cpp"
  "${PROJECTS_RMLUI_BACKENDS_INCLUDE_DIRECTORIES}/RmlUi_Platform_GLFW.h"
  "${PROJECTS_RMLUI_BACKENDS_INCLUDE_DIRECTORIES}/RmlUi_Renderer_GL3.cpp"
  "${PROJECTS_RMLUI_BACKENDS_INCLUDE_DIRECTORIES}/RmlUi_Renderer_GL3.h"
)

target_link_libraries(
  ${PROJECTS_RMLUI_BACKENDS_TARGET_NAME}
  CONAN_PKG::glfw
  CONAN_PKG::rmlui
)